test/1.2/errors/T_EMEMBER.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

struct S0 {
    int i;
}

data S0 x;

typedef struct {
    int y;
    void (*z)(void);
} S1_interface_t;

connect c {
    interface S1;
}

implement S1 {
    /// ERROR EMEMBER
    method foo {}
}

/// WARNING WEXPERIMENTAL
trait t {
    method a();
}

method init()
{
    /// ERROR EMEMBER
    $x.parent;
    // SIMICS-9439
    /// ERROR EMEMBER
    $x.this;

    // no such member
    /// ERROR EMEMBER
    $c.S1.x;
    // not a function
    /// ERROR EMEMBER
    $c.S1.y;
    // not an interface method
    /// ERROR EMEMBER
    $c.S1.z;

    local bitfields 32 {
        uint16 x @ [31:16];
        uint16 y @ [15:0];
    } a = 0;
    /// ERROR EMEMBER
    a.z == 0;

    // bug 18683
    local layout "little-endian" {
        uint16 bar;
    } foo;
    /// ERROR EMEMBER
    foo.x;

    local t y;
    /// ERROR EMEMBER
    y.b();
}
